# robot_estimator

./: CMakeLists.txt  README.md  package.xml
include/: estimator.h  params.h  quatMath.h  simulator.h
launch/: estimator.launch  runRobot.launch  run_robot.launch
msg/: Control.msg  Imu.msg  Markers.msg  MarkersParsed.msg  SpacecraftState.msg  State.msg  StateCov.msg
src/: cans_controller_node.cpp  dynamics_node.cpp  estimator.cpp  estimator_node.cpp  imu_sim_node.cpp  markers_node.cpp  params.cpp  quatMath.cpp  sc_controller_node.cpp  simulator.cpp
